--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <!-- Header starts here -->
         <header style="text-align: center;">
-            <h1>Rhea Boppana</h1>
+            <h1>Rhea</h1>
             <p style="font-size: larger;">Web Developer and Designer</p>
             <img 
             width="200px"
